--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/iwex-infomatics-website/src/main.jsx"></script>
   </body>
 </html>
